--- a/src/components/ui/modal/modal.module.scss
+++ b/src/components/ui/modal/modal.module.scss
@@ -10,7 +10,21 @@
   background-color: var(--color-dark-900);
 }
 
-.content {
+.header {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  box-sizing: border-box;
+  margin-bottom: 18px;
+  padding: 18px 24px;
+
+  border-bottom: 1px solid var(--color-dark-100);
+}
+
+.contentWrapper {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -18,12 +32,10 @@
 
   overflow: auto;
 
-  width: 90vw;
+  box-sizing: border-box;
+  width: 80%;
   max-width: 542px;
-
-  //max-height: 85vh;
-  max-height: 80%;
-  padding: 18px 24px;
+  max-height: calc(100% - 32px);
 
   background-color: var(--color-dark-700);
   border: 1px solid var(--color-dark-500);
@@ -32,24 +44,25 @@
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
-.content::-webkit-scrollbar {
-  width: 12px;
+.contentBox {
+  display: flex;
+  padding: 18px 24px 36px 18px;
 }
 
-.content::-webkit-scrollbar-thumb {
-  background-color: var(--color-dark-500);
-}
+.closeIcon {
+  cursor: pointer;
 
-.content::-webkit-scrollbar-track {
-  background-color: transparent;
-}
-
-.header {
-  position: relative;
+  top: 18px;
+  right: 24px;
 
   display: flex;
-  align-items: center;
-  justify-content: space-between;
 
-  border-bottom: 1px solid var(--color-dark-100);
+  width: 24px;
+  height: 24px;
+
+  opacity: 0.5;
+
+  &:hover {
+    opacity: 1;
+  }
 }
