--- a/src/components/ui/textField/textField.module.scss
+++ b/src/components/ui/textField/textField.module.scss
@@ -8,7 +8,7 @@
 
   padding-bottom: 3px;
 
-  font-size: var(--font-size-xs);
+  font-size: var(--font-size-s);
   line-height: var(--line-height-m);
   color: var(--color-dark-100);
 
