--- a/src/styles/_boilerplate.scss
+++ b/src/styles/_boilerplate.scss
@@ -39,3 +39,20 @@ body {
 
   background-color: var(--color-dark-900);
 }
+
+* {
+  scrollbar-color: var(--color-accent-500) var(--color-dark-500);
+  scrollbar-width: thin;
+}
+
+* ::-webkit-scrollbar {
+  width: 5px;
+}
+
+* ::-webkit-scrollbar-thumb {
+  background-color: var(--color-accent-700);
+}
+
+* ::-webkit-scrollbar-track {
+  background-color: var(--color-light-100);
+}
